--- a/main/src/index.css
+++ b/main/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 6px;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent;
+  }
+  
+  .custom-scrollbar::-webkit-scrollbar-track {
+    background-color: none;
+  }
+  
